# ConBO

./: .coverage  pyproject.toml  testing.py
Test/NLF/: NLF_falsification_elimination_point_history1.pkl  NLF_point_history1.pkl  NLF_point_history_run_1.pkl
lsemibo/classifierInterface/: __init__.py  classifierClass.py  classifierInterface.py  internalClassifier.py
lsemibo/coreAlgorithm/: __init__.py  lsemibo.py  specGPR.py  specification.py  staliroIntegration.py
lsemibo/gprInterface/: internalGPR.py
lsemibo/sampling/: uniformSampling.py
lsemibo/utils/: __init__.py  computeRobustness.py  function.py  sampleSpec.py
tests/: test_lsemibo.py
tests/coreAlgorithm/: test_coreAlgorithm.py  test_coreAlgorithm_1.py  test_coreAlgorithm_2.py  test_specification.py
tests/gprInterface/: test_gprInterface.py
tests/gprInterface/goldResources/: test_1_gpr.pickle  test_2_gpr.pickle
tests/sampling/: test_samplingMethods.py
tests/utils/: test_branchRegion.py  test_calculateConfInterval.py  test_calculateVolume.py  test_computeRobustness.py  test_dividePoints.py  test_function.py  test_sampleSpec.py
